fix wall not showing over path bug

--- a/css/main.css
+++ b/css/main.css
@@ -215,7 +215,7 @@ body {
 }
 
 .wall {
-  background-color: var(--wall);
+  background-color: var(--wall) !important;
 }
 
 .grid {
